<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.fragments.TimeOfDayCheckBoxesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/check_box_morning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check_box_noon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noon"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check_box_evening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:textSize="24sp" />

    </LinearLayout>

</FrameLayout>