<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PrescriptionActivity">

    <TextView
        android:id="@+id/text_view_date_end"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="none"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date_beginning" />

    <TextView
        android:id="@+id/text_app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allan_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_medicine_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/medicine"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_title" />

    <Spinner
        android:id="@+id/spinner_medicine"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_medicine_spinner" />

    <TextView
        android:id="@+id/text_view_date_beginning"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="none"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_medicine" />

    <ImageButton
        android:id="@+id/image_button_pick_beginning_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toEndOf="@+id/text_view_date_beginning"
        app:layout_constraintTop_toBottomOf="@+id/spinner_medicine" />

    <ImageButton
        android:id="@+id/image_button_pick_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@android:drawable/btn_star"
        app:layout_constraintStart_toEndOf="@+id/text_view_date_end"
        app:layout_constraintTop_toBottomOf="@+id/image_button_pick_beginning_date" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_times_of_day_checkboxes"
        android:layout_width="365dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date_end"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="36dp"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_times_of_day_checkboxes"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_view_beginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/beginning"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_date_beginning"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_medicine" />

    <TextView
        android:id="@+id/text_view_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/end"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_date_end"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_beginning" />

    <TextView
        android:id="@+id/text_view_intakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/intakes"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_times_of_day_checkboxes"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_add_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinner_medicine"
        app:layout_constraintTop_toBottomOf="@+id/text_app_title" />

    <TextView
        android:id="@+id/text_view_add_prescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_primary90"
        android:gravity="center_horizontal"
        android:text="@string/add_prescription"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_edit_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@+id/floating_button_add_medicine"
        app:layout_constraintTop_toBottomOf="@+id/text_app_title"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>